# vocal-vibes-reactnative

./: .env  Dockerfile  Makefile  README.md  Readme.md  app.json  babel.config.js  docker-compose.yaml  index.html  jest.config.js  metro.config.js  package-lock.json  package.json  pyproject.toml  start.sh  tailwind.config.js
android/: key.jks  settings.gradle
android/app/: build.gradle
android/app/release/: output-metadata.json
android/gradle/wrapper/: gradle-wrapper.properties
app/: main.py
app/cli/seeders/: main.py
app/core/: gunicorn_conf.py  response.py  security.py
app/core/config/: __init__.py
app/domain/auth/: schema.py  service.py
app/domain/group/: schema.py  service.py
app/domain/session/: schema.py  service.py
app/domain/sso/: base.py  service.py
app/domain/topic/: schema.py  service.py
app/domain/user/: schema.py  service.py
app/exceptions/: exceptions_http.py  exceptions_internal.py
app/infrastructure/postgres/: models.py  session.py
app/routes/: api.py  servicesfac.py
infra/local/: docker-compose.yaml
ios/: .xcode.env.local  Podfile
ios/vocalvibe_app/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/vocalvibe_app.xcodeproj/: project.pbxproj
ios/vocalvibe_app.xcworkspace/: contents.xcworkspacedata
ios/vocalvibe_appTests/: vocalvibe_appTests.m
migrations/: create_database.py  env.py
migrations/versions/: 11ffbce54dbb_create_group_tables.py  7a917825c189_create_required_tables.py  ecf7d928b93c_create_session_tables.py
speech_analysis/: main.py
src/: App.tsx  twrnc.config.ts
src/components/avatars/: index.ts
src/components/buttons/: index.ts
src/components/googleSignin/: GoogleSignin.tsx
src/components/headers/: index.ts
src/constants/: storage.constant.ts
src/hooks/: useVoiceRecognition.tsx
src/navigators/: Application.tsx
src/screens/: index.ts
src/screens/Dashboard/: Dashboard.tsx
src/screens/Example/: Example.tsx
src/screens/Group/: CreateGroupScreen.tsx  Group.tsx  ListGroupScreen.tsx
src/screens/Login/: Login.tsx
src/screens/SelfPractice/: SelfPractice.tsx
src/screens/Sessions/: Sessions.tsx
src/services/: api-client.ts  auth.service.ts  group.service.ts  instance.ts  recording.service.ts  storage.service.ts  topic.service.ts  user.service.ts
src/types/: navigation.ts
(+38 files in other folders)
