[tool.poetry]
name = "speech-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
speechrecognition = "^3.10.4"
pydub = "^0.25.1"
librosa = "^0.10.2.post1"
numpy = "^1.26.4"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
